--- a/portfolio.html
+++ b/portfolio.html
@@ -11,38 +11,44 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
-      <nav class="navigation">
-        <a lang="en" href="" class="logo link">
-          <span class="logo-name">Web</span>Studio</a
-        >
-        <ul class="site-nav list">
-          <li class="site-nav-item">
-            <a href="./index.html" class="site-nav-link link">Студия</a>
-          </li>
-          <li class="site-nav-item">
-            <a href="./portfolio.html" class="site-nav-link link current"
-              >Портфолио</a
+      <div class="container">
+        <nav class="navigation">
+          <a lang="en" href="" class="logo link">
+            <span class="logo-name">Web</span>Studio</a
+          >
+          <ul class="site-nav list">
+            <li class="site-nav-item">
+              <a href="./index.html" class="site-nav-link link">Студия</a>
+            </li>
+            <li class="site-nav-item">
+              <a href="./portfolio.html" class="site-nav-link link current"
+                >Портфолио</a
+              >
+            </li>
+            <li class="site-nav-item">
+              <a href="" class="site-nav-link link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contact list">
+          <li class="contact-item">
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
             >
           </li>
-          <li class="site-nav-item">
-            <a href="" class="site-nav-link link">Контакты</a>
+          <li class="contact-item">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
-      </nav>
-      <ul class="contact list">
-        <li class="contact-item">
-          <a href="mailto:info@devstudio.com" class="link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="contact-item">
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <section class="project section">
