--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container main-nav">
         <nav class="navigation">
           <a lang="en" href="" class="logo link">
             <span class="logo-name">Web</span>Studio</a
@@ -59,31 +62,31 @@
       </section>
       <section class="benefits section">
         <div class="container">
-          <h2 class="title">Преимущества</h2>
+          <h2 class="title visually-hidden">Преимущества</h2>
           <ul class="benefist-list list">
             <li class="benefits-item">
-              <h3 class="benefits-title title">Внимание к деталям</h3>
-              <p>
+              <h3 class="benefits-title">Внимание к деталям</h3>
+              <p class="description">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
             <li class="benefits-item">
-              <h3 class="benefits-title title">Пунктуальность</h3>
+              <h3 class="benefits-title">Пунктуальность</h3>
               <p class="description">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
             <li class="benefits-item">
-              <h3 class="benefits-title title">Планирование</h3>
+              <h3 class="benefits-title">Планирование</h3>
               <p class="description">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
-              <h3 class="benefits-title title">Современные технологии</h3>
+            <li class="benefits-item">
+              <h3 class="benefits-title">Современные технологии</h3>
               <p class="description">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
