--- a/portfolio.html
+++ b/portfolio.html
@@ -14,12 +14,15 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container main-nav">
         <nav class="navigation">
           <a lang="en" href="" class="logo link">
             <span class="logo-name">Web</span>Studio</a
@@ -52,185 +55,207 @@
     </header>
     <main>
       <section class="project section">
-        <h1 class="title">Портфолио</h1>
-        <ul class="buutton-list">
-          <li class="button-item">
-            <button type="button" class="button button-secondary">Все</button>
-          </li>
-          <li class="button-item">
-            <button type="button" class="button button-secondary">
-              Веб-сайты
-            </button>
-          </li>
-          <li class="buttont-item">
-            <button type="button" class="button button-secondary">
-              Приложения
-            </button>
-          </li>
-          <li class="button-item">
-            <button type="button" class="button button-secondary">
-              Дизайн
-            </button>
-          </li>
-          <li class="button-item">
-            <button type="button" class="button button-secondary">
-              Маркетинг
-            </button>
-          </li>
-        </ul>
-        <ul class="project-list">
-          <li class="project-item">
-            <a href="" class="link"
-              ><img
-                src="./images/img-1.jpg"
-                alt="страница в браузере"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title title">Технокряк</h2>
-              <p class="project-name">Веб-сайт</p></a
-            >
-          </li>
-          <li class="project-item">
-            <a href="" class="link"
-              ><img
-                src="./images/img-2.jpg"
-                alt="играют в баскетбол"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title title">
-                Постер <span lang="en">New Orlean vs Golden Star</span>
-              </h2>
-              <p class="project-name">Дизайн</p></a
-            >
-          </li>
-          <li class="project-item">
-            <a href="" class="link"
-              ><img
-                src="./images/img-3.jpg"
-                alt="рыба"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title title">
-                Ресторан <span lang="en">Seafood</span>
-              </h2>
-              <p class="project-name">Приложение</p></a
-            >
-          </li>
-          <li class="project-item">
-            <a href="" class="link"
-              ><img
-                src="./images/img-4.jpg"
-                alt="наушники"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title title">
-                Проект <span lang="en">Prime</span>
-              </h2>
-              <p class="project-name">Маркетинг</p></a
-            >
-          </li>
-          <li class="project-item">
-            <a href="" class="link"
-              ><img
-                src="./images/img-5.jpg"
-                alt="коробки"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title title">
-                Проект <span lang="en">Boxes</span>
-              </h2>
-              <p class="project-name">Приложение</p></a
-            >
-          </li>
-          <li class="project-item">
-            <a href="" class="link"
-              ><img
-                src="./images/img-6.jpg"
-                alt="монитор"
-                width="370"
-                height="294"
-              />
-              <h2 lang="en" class="project-title title">
-                Inspiration has no Borders
-              </h2>
-              <p class="project-name">Веб-сайт</p></a
-            >
-          </li>
-          <li class="project-item">
-            <a href="" class="link"
-              ><img
-                src="./images/img-7.jpg"
-                alt="книга"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title title">
-                Издание <span lang="en">Limited Edition</span>
-              </h2>
-              <p class="project-name">Дизайн</p></a
-            >
-          </li>
-          <li class="project-item">
-            <a href="" class="link"
-              ><img
-                src="./images/img-8.jpg"
-                alt="эмблема"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title title">
-                Проект <span lang="en">LAB</span>
-              </h2>
-              <p class="project-name">Маркетинг</p></a
-            >
-          </li>
-          <li class="project-item">
-            <a href="" class="link"
-              ><img
-                src="./images/img-9.jpg"
-                alt="печатает на ноутбуке"
-                width="370"
-                height="294"
-              />
-              <h2 lang="en" class="project-title title">Growing Business</h2>
-              <p class="project-name">Приложение</p></a
-            >
-          </li>
-        </ul>
+        <div class="container">
+          <h1 class="title visually-hidden">Портфолио</h1>
+          <ul class="button-list">
+            <li class="button-item">
+              <button type="button" class="button button-secondary">Все</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button button-secondary">
+                Веб-сайты
+              </button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button button-secondary">
+                Приложения
+              </button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button button-secondary">
+                Дизайн
+              </button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button button-secondary">
+                Маркетинг
+              </button>
+            </li>
+          </ul>
+          <ul class="project-list">
+            <li class="project-item">
+              <a href="" class="link"
+                ><img
+                  src="./images/img-1.jpg"
+                  alt="страница в браузере"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-content">
+                  <h2 class="project-title">Технокряк</h2>
+                  <p class="project-name">Веб-сайт</p>
+                </div></a
+              >
+            </li>
+            <li class="project-item">
+              <a href="" class="link"
+                ><img
+                  src="./images/img-2.jpg"
+                  alt="играют в баскетбол"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-content">
+                  <h2 class="project-title">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h2>
+                  <p class="project-name">Дизайн</p>
+                </div></a
+              >
+            </li>
+            <li class="project-item">
+              <a href="" class="link"
+                ><img
+                  src="./images/img-3.jpg"
+                  alt="рыба"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-content">
+                  <h2 class="project-title">
+                    Ресторан <span lang="en">Seafood</span>
+                  </h2>
+                  <p class="project-name">Приложение</p>
+                </div></a
+              >
+            </li>
+            <li class="project-item">
+              <a href="" class="link"
+                ><img
+                  src="./images/img-4.jpg"
+                  alt="наушники"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-content">
+                  <h2 class="project-title">
+                    Проект <span lang="en">Prime</span>
+                  </h2>
+                  <p class="project-name">Маркетинг</p>
+                </div></a
+              >
+            </li>
+            <li class="project-item">
+              <a href="" class="link"
+                ><img
+                  src="./images/img-5.jpg"
+                  alt="коробки"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-content">
+                  <h2 class="project-title">
+                    Проект <span lang="en">Boxes</span>
+                  </h2>
+                  <p class="project-name">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-item">
+              <a href="" class="link"
+                ><img
+                  src="./images/img-6.jpg"
+                  alt="монитор"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-content">
+                  <h2 lang="en" class="project-title">
+                    Inspiration has no Borders
+                  </h2>
+                  <p class="project-name">Веб-сайт</p>
+                </div></a
+              >
+            </li>
+            <li class="project-item">
+              <a href="" class="link"
+                ><img
+                  src="./images/img-7.jpg"
+                  alt="книга"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-content">
+                  <h2 class="project-title">
+                    Издание <span lang="en">Limited Edition</span>
+                  </h2>
+                  <p class="project-name">Дизайн</p>
+                </div></a
+              >
+            </li>
+            <li class="project-item">
+              <a href="" class="link"
+                ><img
+                  src="./images/img-8.jpg"
+                  alt="эмблема"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-content">
+                  <h2 class="project-title">
+                    Проект <span lang="en">LAB</span>
+                  </h2>
+                  <p class="project-name">Маркетинг</p>
+                </div></a
+              >
+            </li>
+            <li class="project-item">
+              <a href="" class="link"
+                ><img
+                  src="./images/img-9.jpg"
+                  alt="печатает на ноутбуке"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-content">
+                  <h2 lang="en" class="project-title">Growing Business</h2>
+                  <p class="project-name">Приложение</p>
+                </div></a
+              >
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a lang="en" href="" class="logo link"
-        ><span class="logo-name">Web</span>Studio</a
-      >
-      <address>
-        <ul class="footer-contact">
-          <li>
-            <a
-              href="https://goo.gl/maps/VYor2QJVqiVH9sgh6"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="location link"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@example.com" class="footer-contact-mail link"
-              >info@example.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380991111111" class="footer-contact-phone link"
-              >+38 099 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a lang="en" href="" class="logo link"
+          ><span class="logo-name">Web</span>Studio</a
+        >
+        <address>
+          <ul class="footer-contact">
+            <li>
+              <a
+                href="https://goo.gl/maps/VYor2QJVqiVH9sgh6"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="location link"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li>
+              <a href="mailto:info@example.com" class="footer-contact-mail link"
+                >info@example.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380991111111" class="footer-contact-phone link"
+                >+38 099 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
