--- a/portfolio.html
+++ b/portfolio.html
@@ -234,7 +234,7 @@
         >
         <address>
           <ul class="footer-contact">
-            <li>
+            <li class="footer-contact-item">
               <a
                 href="https://goo.gl/maps/VYor2QJVqiVH9sgh6"
                 target="_blank"
@@ -243,12 +243,12 @@
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-contact-item">
               <a href="mailto:info@example.com" class="footer-contact-mail link"
                 >info@example.com</a
               >
             </li>
-            <li>
+            <li class="footer-contact-item">
               <a href="tel:+380991111111" class="footer-contact-phone link"
                 >+38 099 111 11 11</a
               >
