--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="button button-primary">
-          Заказать услугу
-        </button>
+        <div class="container">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button type="button" class="button button-primary">
+            Заказать услугу
+          </button>
+        </div>
       </section>
       <section class="benefits section">
         <div class="container">
